tests/NormalTests/paczka1/small_fuzzy/15091566.err
Error in line 3: 0Vl A747 56,4
Error in line 12: Gm1jL534bkS A837 23,2
